rendered-manifests.yaml
---
# Source: nginx-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-nginx-app
  labels:
    app.kubernetes.io/name: nginx-app
    app.kubernetes.io/instance: my-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: nginx-app
    app.kubernetes.io/instance: my-app
---
# Source: nginx-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-nginx-app
  labels:
    app.kubernetes.io/name: nginx-app
    app.kubernetes.io/instance: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-app
      app.kubernetes.io/instance: my-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-app
        app.kubernetes.io/instance: my-app
    spec:
      # 1. Исправляем run-as-non-root: гарантируем некорневой запуск на уровне Пода
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - nginx-app
            topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx-app
        image: "nginxinc/nginx-unprivileged:1.25-alpine"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
        resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
        # 2. Исправляем no-read-only-root-fs: монтируем RAM-диски для логов/кэша Nginx
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: nginx-tmp
        - mountPath: /var/run
          name: nginx-tmp
        - mountPath: /tmp
          name: nginx-tmp
      
      volumes:
      - name: nginx-tmp
        emptyDir: {}
